tests/errors/syn_method1.java
public class syn_method1{
 ( ) { }
}